fixed and created notebook files

--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Data Notebook\n",
     "\n",
-    "This notebook shows what the raw data looks like and what the filtered data looks like."
+    "This notebook shows what the raw data looks like."
    ]
   },
   {
@@ -16,7 +16,6 @@
    "outputs": [],
    "source": [
     "# Imports #\n",
-    "from os import path\n",
     "import pandas as pd"
    ]
   },
@@ -47,43 +46,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the raw data, we are not getting the specific chromosome we want to interact with. Also, the sequence data is mixed with upercase and lowercase letters."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Filtered Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_data = pd.read_csv('../data/filtered_data.csv')\n",
-    "filtered_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_data.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the filtered data, we get the chromosome we want to analyze, and the sequence is in all uppercase letters, making it easier to use."
+    "raw_data.info()"
    ]
   }
  ],
