--- a/notebooks/maskedlm_results.ipynb
+++ b/notebooks/maskedlm_results.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows the results of the MaskedLM model on the kmer data"
+    "This notebook shows the results of the MaskedLM model on the kmers data"
    ]
   },
   {
